--- a/lib/circular_web/templates/layout/lp_root.html.leex
+++ b/lib/circular_web/templates/layout/lp_root.html.leex
@@ -5,11 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <%= csrf_meta_tag() %>
-    <%= live_title_tag assigns[:page_title] || "Circular", suffix: " · Phoenix Framework" %>
+    <%= live_title_tag assigns[:page_title] || "Circular App" %>
     <link phx-track-static rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <script defer phx-track-static type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </head>
+  <body>
+<div class="min-h-screen bg-white">
+
+  <%= @inner_content %>
+
+  </body>
+  </html>
+  <!--
   <body>
     <header>
       <section class="container">
@@ -20,13 +27,14 @@
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
           </ul>
-          <%= render "_user_menu.html", assigns %>
+
         </nav>
         <a href="https://phoenixframework.org/" class="phx-logo">
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
     </header>
-    <%= @inner_content %>
+
   </body>
 </html>
+-->
