--- a/lib/circular_web/templates/user_session/new.html.eex
+++ b/lib/circular_web/templates/user_session/new.html.eex
@@ -7,7 +7,7 @@
     </h2>
     <p class="mt-2 text-center text-sm leading-5 text-gray-600 max-w">
       Or
-      <%= link "register for free", to: Routes.user_registration_path(@conn, :new), class: "font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %> |
+      <%= link "register for free", to: Routes.user_registration_path(@conn, :new), class: "font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
     </p>
   </div>
 
