--- a/lib/circular_web/templates/user_registration/new.html.eex
+++ b/lib/circular_web/templates/user_registration/new.html.eex
@@ -1,38 +1,32 @@
-
-
 <div class="min-h-screen bg-white flex">
   <div class="flex-1 flex flex-col justify-center py-12 px-4 sm:px-6 lg:flex-none lg:px-20 xl:px-24">
     <div class="mx-auto w-full max-w-sm lg:w-96">
       <div>
         <img class="h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-on-white.svg" alt="Workflow">
-        <h2 class="mt-6 text-3xl leading-9 font-extrabold text-gray-900">
-          Register a new account
-        </h2>
+        <h2 class="mt-6 text-3xl leading-9 font-extrabold text-gray-900">Register a new account</h2>
       </div>
 
       <div class="mt-8">
-
         <div class="mt-6">
           <%= form_for @changeset, Routes.user_registration_path(@conn, :create), fn f -> %>
-            <%= input f, :email %>
-            <%= input f, :password %>
-
-            <div class="mt-6">
-              <span class="block w-full rounded-md shadow-sm">
-                <%= submit "Register", class: "w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
-              </span>
-            </div>
+          <%= input f, :email %>
+          <%= input f, :password %>
+          <div class="mt-6">
+            <span class="block w-full rounded-md shadow-sm">
+              <%= submit "Register", class: "w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
+            </span>
+          </div>
           <% end %>
           <p class="mt-6 text-sm leading-5 text-gray-600 max-w">
-          Or
-          <%= link "sign in to your existing account", to: Routes.user_session_path(@conn, :new), class: class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
-
-        </p>
+            Or
+            <%= link "sign in to your existing account", to: Routes.user_session_path(@conn, :new), class: class="font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+          </p>
         </div>
       </div>
     </div>
   </div>
   <div class="hidden lg:block relative w-0 flex-1">
-    <img class="absolute inset-0 h-full w-full object-cover" src="<%= Routes.static_path(@conn, "/images/signup.jpg") %>" alt="Sign Up for Circular App"/>
+    <img class="absolute inset-0 h-full w-full object-cover"
+      src="<%= Routes.static_path(@conn, "/images/signup.jpg") %>" alt="Sign Up for Circular App" />
   </div>
 </div>
