DRY up form html code

--- a/lib/circular_web/templates/user_registration/new.html.eex
+++ b/lib/circular_web/templates/user_registration/new.html.eex
@@ -13,13 +13,13 @@
           <%= input f, :password %>
           <div class="mt-6">
             <span class="block w-full rounded-md shadow-sm">
-              <%= submit "Register", class: "w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
+              <%= submit "Register", class: "btn" %>
             </span>
           </div>
           <% end %>
           <p class="mt-6 text-sm leading-5 text-gray-600 max-w">
             Or
-            <%= link "sign in to your existing account", to: Routes.user_session_path(@conn, :new), class: "font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+            <%= link "sign in to your existing account", to: Routes.user_session_path(@conn, :new), class: "link" %>
           </p>
         </div>
       </div>
