--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,28 +4,26 @@
 @tailwind utilities;
 
 @layer components {
-  .control-label {
-    @apply block text-sm font-medium leading-5 text-gray-700;
+  .link {
+    @apply font-medium text-indigo-600 transition ease-in-out duration-150
+  }
+  .link:hover {
+    @apply text-indigo-500
+  }
+  .link:focus {
+    @apply outline-none underline
   }
 
-  .form-control {
-    @apply appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md transition duration-150 ease-in-out;
+  .btn {
+    @apply w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 transition duration-150 ease-in-out
   }
-  .form-control:focus {
-    @apply outline-none shadow-outline-blue border-blue-300
+  .btn:hover {
+    @apply bg-indigo-500
   }
-  .form-control:sm {
-    @apply text-sm leading-5
+  .btn:focus {
+    @apply outline-none border-indigo-700 shadow-outline-indigo
   }
-  .form-control::placeholder {
-    @apply text-gray-400
-  }
-
-  .form-checkbox {
-    @apply h-4 w-4 text-indigo-600 transition duration-150 ease-in-out;
-  }
-
-  .form-group {
-    @apply mt-6
+  .btn:active {
+    @apply bg-indigo-700
   }
 }
