--- a/lib/circular_web/templates/user_session/new.html.eex
+++ b/lib/circular_web/templates/user_session/new.html.eex
@@ -7,7 +7,7 @@
     </h2>
     <p class="mt-2 text-center text-sm leading-5 text-gray-600 max-w">
       Or
-      <%= link "register for free", to: Routes.user_registration_path(@conn, :new), class: "font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+      <%= link "register for free", to: Routes.user_registration_path(@conn, :new), class: "link" %>
     </p>
   </div>
 
@@ -41,13 +41,13 @@
           </div>
 
           <div class="text-sm leading-5">
-            <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new), class: "font-medium text-indigo-600 hover:text-indigo-500 focus:outline-none focus:underline transition ease-in-out duration-150" %>
+            <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new), class: "link" %>
           </div>
         </div>
 
         <div class="mt-6">
           <span class="block w-full rounded-md shadow-sm">
-            <%= submit "Log in", class: "w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
+            <%= submit "Log in", class: "btn" %>
           </span>
         </div>
       <% end %>
